# UNICESUMAR-processamento-de-imagens

./: desenhar-e-escrever.ipynb  histograma.ipynb  pyproject.toml  transformacoesd-de-imagem.ipynb
